# aoc2024

./: README.md
day01/: Cargo.toml
day01/src/: main.py  main.rs
day02/: Cargo.toml
day02/src/: main.py  main.rs
day03/: Cargo.toml
day03/src/: main.py  main.rs
day04/: Cargo.toml
day04/src/: main.py  main.rs
day05/: Cargo.toml
day05/src/: main.py  main.rs
day06/: Cargo.toml
day06/src/: main.py  main.rs  main_gfx.py
day07/: Cargo.toml
day07/src/: main.py  main.rs
day08/: Cargo.toml
day08/src/: main.py  main.rs  main_gfx.py
day09/: Cargo.toml
day09/src/: main.py  main.rs  main_gfx.py
day10/: Cargo.toml
day10/src/: main.py  main.rs  main_gfx.py
day11/: Cargo.toml
day11/src/: main.py  main.rs
day12/: Cargo.toml
day12/src/: main.py  main.rs  main_gfx.py
day13/: Cargo.toml
day13/src/: main.py  main.rs  main_compact.py
day14/: Cargo.toml
day14/src/: main.py  main.rs
day15/: Cargo.toml
day15/src/: main.py  main.rs  main_gfx.py
day16/: Cargo.toml
day16/src/: main.py  main.rs  main_gfx.py
day17/: Cargo.toml
day17/src/: main.py  main.rs
day18/: Cargo.toml
day18/src/: main.py  main.rs  main_gfx.py
day19/: Cargo.toml
day19/src/: main.py  main.rs
day20/: Cargo.toml
day20/src/: main.py  main.rs  main_gfx.py
day21/: Cargo.toml
day21/src/: main.py  main.rs
day22/: Cargo.toml
day22/src/: main.py  main.rs
day23/: Cargo.toml
day23/src/: main.py  main.rs
day24/: Cargo.toml
day24/src/: main.py  main.rs
day25/: Cargo.toml
day25/src/: main.py  main.rs
